# crewai_example_repo_2

./: README.md  pyproject.toml
knowledge/: user.json
src/crewai_example_repo_2/: crew.py  main.py
src/crewai_example_repo_2/config/: agents.yaml  tasks.yaml
