[project]
name = "crewai_example_repo_2"
version = "0.1.0"
description = "crewai-example-repo-2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
crewai_example_repo_2 = "crewai_example_repo_2.main:run"
run_crew = "crewai_example_repo_2.main:run"
train = "crewai_example_repo_2.main:train"
replay = "crewai_example_repo_2.main:replay"
test = "crewai_example_repo_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.sources]
# crewai = { path = "/Users/lorenzejay/Documents/Uplift Digital Solutions/clients/crewai-org/crewAI", editable = true }
